# XCBBuildServiceProxyKit

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  CODEOWNERS  LICENSE  MODULE.bazel  Package.swift  README.md  WORKSPACE  repositories.bzl
Docs/: UPDATING.md
Examples/: .bazelrc  WORKSPACE
Examples/BazelXCBBuildService/: BUILD  BUILD.bazel  Package.swift
Examples/BazelXCBBuildService/BEP/: BUILD  build_event_stream.proto  command_line.proto
Examples/BazelXCBBuildService/Sources/: BazelBuild.swift  BazelBuildProcess.swift  RequestHandler.swift  main.swift
Sources/XCBBuildServiceProxyKit/: BUILD  Logger.swift  Proxy.swift
Sources/XCBBuildServiceProxyKit/Hybrid/: HybridRPCRequestHandler.swift  HybridXCBBuildService.swift
Sources/XCBProtocol/: BUILD
Sources/XCBProtocol/Codable/: AnyCodingKey.swift  Box.swift  FixedWidthInteger+BigEndianBytes.swift
Sources/XCBProtocol/Codable/Encoder/: KeyedEncodingContainer.swift  Pack.swift  (+4 more)
Sources/XCBProtocol/Messages/: ByteString.swift  IPCMessage.swift  Message.swift  MessageEnum.swift  Platform.swift  Version.swift
Sources/XCBProtocol/PIF/: BuildConfiguration.swift  FileGroup.swift  GroupTreeReference.swift  ImpartedBuildProperties.swift  MacroExpressionSource.swift  PIFObject.swift  PlatformFilter.swift  Project.swift  SourceTree.swift  Target.swift  TargetDependency.swift  Workspace.swift
Tests/XCBBuildServiceProxyKitTests/: BUILD
Tests/XCBProtocolTests/: BUILD  BuildCommandMessagePayloadTests.swift  DiagnosticTests.swift  MessagePackEncoderTests.swift
lib/: extensions.bzl  repositories.bzl
xcodeproj/: BUILD
(+34 files in other folders)
