module(
    name = "xcbbuildserviceproxykit",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(
    name = "rules_swift",
    version = "1.7.1",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(
    name = "rules_apple",
    version = "2.2.0",
    repo_name = "build_bazel_rules_apple",
)
bazel_dep(
    name = "rules_xcodeproj",
    version = "1.3.3",
    dev_dependency = True,
)

non_module_deps = use_extension("//lib:extensions.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    "com_github_apple_swift_collections",
)
